--- a/css/style.css
+++ b/css/style.css
@@ -415,7 +415,6 @@ span.arrow {
   width: 100%;
   height: 400px;
 }
-
 .topSection h1 {
   font-family: 'Lato', source-regular, Arial, Helvetica, sans-serif;
   padding-top: 200px;
@@ -431,13 +430,6 @@ span.arrow {
   width: 220px;
   transition: all 0.3s ease;
 }
-
-.buttonTextWrapper {
-  width: 100%;
-  height: 50%;
-  transition: all 0.3s ease;
-}
-
 .button a {
   text-decoration: none;
   font-size: 15px;
@@ -446,8 +438,9 @@ span.arrow {
   text-shadow: 1px 1px 0 #333;
 }
 
-.topSection .button:hover {
-  background-color: #000;
+.buttonTextWrapper {
+  width: 100%;
+  height: 50%;
   transition: all 0.3s ease;
 }
 
@@ -455,6 +448,10 @@ span.arrow {
   margin: 0 auto;
   margin-top: 20px;
   background-color: #26c1d9;
+  transition: all 0.3s ease;
+}
+.topSection .button:hover {
+  background-color: #000;
   transition: all 0.3s ease;
 }
 
@@ -506,16 +503,15 @@ span.arrow {
   height: 200px;
 }
 
-.social {
-  float: left;
-  background-color: #f7f7f7;
-  width: 100%;
-  height: 80px;
-}
-
 .about {
   display: inline-block;
   float: left;
+}
+.about p {
+  display: block;
+  width: 70%;
+  margin: 0 auto;
+  padding-bottom: 50px;
 }
 
 .about img,
@@ -533,36 +529,24 @@ span.arrow {
   margin-bottom: 40px;
 }
 
-.about p {
-  display: block;
-  width: 70%;
-  margin: 0 auto;
-  padding-bottom: 50px;
-}
-
 .contactSection {
   width: 80%;
   margin: 0 auto;
 }
-
-.officeInfo {
+.contactSection .officeInfo {
   float: left;
 }
-
-.officeInfo p {
+.contactSection .officeInfo p {
   margin-top: 0px;
 }
-
-.officeInfo h3 {
+.contactSection .officeInfo h3 {
   margin-bottom: 15px;
 }
-
-.officeInfo a {
+.contactSection .officeInfo a {
   text-decoration: none;
   color: #26c1d9;
 }
-
-.contactForm {
+.contactSection .contactForm {
   float: right;
 }
 
@@ -570,20 +554,17 @@ span.arrow {
   float: left;
   width: 100%;
 }
-
-.locationMap {
+.locationInfo .locationMap {
   float: left;
   width: 33%;
   background-color: #eee;
   padding: 20px;
   margin-bottom: 40px;
 }
-
-.locationMap .map {
+.locationInfo .locationMap .map {
   width: 100%;
 }
-
-.locationDetails {
+.locationInfo .locationDetails {
   float: right;
   width: 63%;
 }
@@ -594,83 +575,85 @@ span.arrow {
   /*margin: 0 auto;*/
   margin-bottom: 40px;
 }
-
-.locationsList img {
-  width: 220px;
-  position: relative;
-}
-
-.flexWrap {
-  width: 100%;
-  margin: 0 auto;
-}
-
-.flexWrap .flex-control-paging li a {
-  display: none;
-}
-
-.flexWrap .flexslider {
-  border: none;
-}
-
-.place {
+.locationsList .place {
   display: inline-block;
   float: left;
   width: 220px;
   margin: 0 auto;
   margin-right: 40px;
 }
-
-.locationsList a:last-child .place {
-  margin-right: 0;
-}
-
-.place:hover img {
-  opacity: 0.7;
-  width: 220px;
-}
-
-.place h3,
-.place p {
+.locationsList .place h3,
+.locationsList .place p {
   color: #000;
   width: 220px;
   margin: 0;
   padding: 0;
 }
+.locationsList .place img {
+  width: 220px;
+  position: relative;
+}
+.locationsList .place:hover img {
+  opacity: 0.7;
+  width: 220px;
+}
+.locationsList a:last-child .place {
+  margin-right: 0;
+}
 
-.socialWrapper {
+.flexWrap {
+  width: 100%;
+  margin: 0 auto;
+}
+.flexWrap .flexslider {
+  border: none;
+}
+.flexWrap .flex-control-paging li a {
+  display: none;
+}
+
+.social {
+  float: left;
+  background-color: #f7f7f7;
+  width: 100%;
+  height: 80px;
+}
+.social .socialWrapper {
   float: right;
   padding-top: 20px;
   margin-right: 60px;
 }
-
-.icon {
+.social .socialWrapper .icon {
   display: inline-block;
   width: 45px;
   height: 55px;
   /*padding-left: 4px;*/
   padding-top: 5px;
 }
-
-.icon img {
+.social .socialWrapper .icon img {
   width: 30px;
 }
 
 footer {
   float: left;
   background-image: url(../images/background.png);
-  /*background-color: #000;*/
   width: 100%;
   height: 80px;
 }
-
-.signupForm {
+footer .signupForm {
   float: left;
   padding-top: 25px;
   padding-left: 60px;
 }
-
-input.submitButton {
+footer .signupForm input.email {
+  font-size: 12px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  width: 350px;
+  box-shadow: 0 1px 0 #fff;
+}
+footer .signupForm input.submitButton {
   background-color: #392f28;
   border-radius: 4px;
   font-size: 14px;
@@ -681,28 +664,16 @@ input.submitButton {
   margin-left: 5px;
   transition: all 0.3s ease;
 }
-
-input.submitButton:hover {
+footer .signupForm input.submitButton:hover {
   background-color: #000;
   transition: all 0.3s ease;
 }
-
-input.email {
-  font-size: 12px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  padding: 10px;
-  width: 350px;
-  box-shadow: 0 1px 0 #fff;
-}
-
-input.focus:focus {
+footer .signupForm input.focus:focus {
   border-color: #096EB3;
   outline: none;
   box-shadow: 0 0 0 2px #096EB3;
 }
-
-.copy {
+footer .copy {
   float: right;
   position: relative;
   color: #fff;
