--- a/css/style.scss
+++ b/css/style.scss
@@ -87,10 +87,6 @@ nav{
 	margin-bottom: 30px;
 }
 
-
-
-
-
 .wrapper{
 	max-width: 1000px;
 	margin: 0 auto;
@@ -266,11 +262,6 @@ span.arrow {
 	color: #888;
 }
 
-
-
-
-
-
 .topSection{
 	background-image: url(../images/IntelligentsiaMocha.jpg); 
 	background-repeat: no-repeat;
@@ -278,14 +269,13 @@ span.arrow {
 	background-position: center;
 	width: 100%;
 	height: 400px;
-}
-
-.topSection h1{
-	font-family: 'Lato', source-regular, Arial, Helvetica, sans-serif;
-	padding-top: 200px;
-	padding-bottom: 0;
-	color: #fff;
-	text-shadow:1px 1px 4px black;
+	h1{
+		font-family: 'Lato', source-regular, Arial, Helvetica, sans-serif;
+		padding-top: 200px;
+		padding-bottom: 0;
+		color: #fff;
+		text-shadow:1px 1px 4px black;
+	}
 }
 
 .button{
@@ -294,6 +284,13 @@ span.arrow {
 	border-radius: 3px;
 	width: 220px;
 	transition: all 0.3s ease;
+	a{
+	text-decoration: none;
+	font-size: 15px;
+	line-height: 300%;
+	color: #fff;
+	text-shadow:1px 1px 0 #333;
+}
 }
 
 .buttonTextWrapper{
@@ -302,26 +299,15 @@ span.arrow {
 	transition: all 0.3s ease;
 }
 
-.button a{
-	text-decoration: none;
-	font-size: 15px;
-	line-height: 300%;
-	color: #fff;
-	text-shadow:1px 1px 0 #333;
-}
-
-.topSection .button:hover{
-	background-color: #000;
-	transition: all 0.3s ease;
-}
-
-
 .topSection .button{
 	margin: 0 auto;
 	margin-top: 20px;
 	background-color: #26c1d9;
 	transition: all 0.3s ease;
-
+	&:hover{
+		background-color: #000;
+		transition: all 0.3s ease;
+	}
 }
 
 .leftSection .button,
@@ -372,16 +358,17 @@ span.arrow {
 	height: 200px;
 }
 
-.social{
-	float: left;
-	background-color: #f7f7f7;
-	width: 100%;
-	height: 80px;
-}
+
 
 .about{
 	display: inline-block;
 	float: left;
+	p{
+		display: block;
+		width: 70%;
+		margin: 0 auto;
+		padding-bottom: 50px;
+	}
 }
 
 .about img,
@@ -399,59 +386,44 @@ span.arrow {
 	margin-bottom: 40px;
 }
 
-.about p{
-	display: block;
-	width: 70%;
-	margin: 0 auto;
-	padding-bottom: 50px;
-}
-
 .contactSection{
 	width: 80%;
 	margin: 0 auto;
-}
-
-.officeInfo{
-	float: left;
-}
-
-.officeInfo p{
-	margin-top: 0px;
-}
-
-.officeInfo h3{
-	margin-bottom: 15px;
-}
-
-.officeInfo a{
-	text-decoration: none;
-	color: #26c1d9;
-}
-
-.contactForm{
-	float: right;
+	.officeInfo{
+		float: left;
+		p{
+			margin-top: 0px;
+		}
+		h3{
+			margin-bottom: 15px;
+		}
+		a{
+			text-decoration: none;
+			color: #26c1d9;
+		}
+	}
+	.contactForm{
+		float: right;
+	}
 }
 
 .locationInfo{
 	float: left;
 	width: 100%;
-}
-
-.locationMap{
-	float: left;
-	width: 33%;
-	background-color: #eee;
-	padding: 20px;
-	margin-bottom: 40px;
-}
-
-.locationMap .map{
-	width: 100%;
-}
-
-.locationDetails{
-	float: right;
-	width: 63%;
+	.locationMap{
+		float: left;
+		width: 33%;
+		background-color: #eee;
+		padding: 20px;
+		margin-bottom: 40px;
+		.map{
+			width: 100%;
+		}
+	}
+	.locationDetails{
+		float: right;
+		width: 63%;
+	}
 }
 
 .locationsList{
@@ -459,127 +431,117 @@ span.arrow {
 	width: 100%;
 	/*margin: 0 auto;*/
 	margin-bottom: 40px;
-}
-
-.locationsList img{
-	width: 220px;
-	position: relative;
+	.place{
+		display: inline-block;
+		float: left;
+		width: 220px;
+		margin: 0 auto;
+		margin-right: 40px;
+		h3, 
+		p{
+			color: #000;
+			width: 220px;
+			margin: 0;
+			padding: 0;
+		}
+		img{
+			width: 220px;
+			position: relative;
+		}
+		&:hover img{
+			opacity: 0.7;
+			width: 220px;
+		}
+	}
+	a:last-child .place{
+		margin-right: 0;
+	}
 }
 
 .flexWrap{
 	width: 100%;
 	margin: 0 auto;
+	.flexslider{
+		border: none;
+	}
+	.flex-control-paging li a{
+		display: none;
+	}
 }
 
-.flexWrap .flex-control-paging li a{
-	display: none;
-}
-
-.flexWrap .flexslider{
-	border: none;
-}
-
-.place{
-	display: inline-block;
+.social{
 	float: left;
-	width: 220px;
-	margin: 0 auto;
-	margin-right: 40px;
-}
-
-.locationsList a:last-child .place{
-	margin-right: 0;
-}
-
-.place:hover img{
-	opacity: 0.7;
-	width: 220px;
-}
-
-.place h3, 
-.place p{
-	color: #000;
-	width: 220px;
-	margin: 0;
-	padding: 0;
-}
-
-.socialWrapper{
-	float: right;
-	padding-top: 20px;
-	margin-right: 60px;	
-}
-
-.icon{
-	display: inline-block;
-	width: 45px;
-	height: 55px;
-	/*padding-left: 4px;*/
-	padding-top: 5px;
-	
-}
-
-.icon img{
-	width: 30px;
+	background-color: #f7f7f7;
+	width: 100%;
+	height: 80px;
+	.socialWrapper{
+		float: right;
+		padding-top: 20px;
+		margin-right: 60px;	
+		.icon{
+			display: inline-block;
+			width: 45px;
+			height: 55px;
+			/*padding-left: 4px;*/
+			padding-top: 5px;	
+			img{
+				width: 30px;
+			}
+		}
+	}
 }
 
 footer{
 	float: left;
 	background-image: url(../images/background.png);
-
-	/*background-color: #000;*/
 	width: 100%;
 	height: 80px;
+	.signupForm{
+		float: left;
+		padding-top: 25px;
+		padding-left: 60px;
+		input.email{
+			font-size: 12px;
+			border-radius: 4px;
+			border: 1px solid #ccc;
+			padding: 10px;
+			width: 350px;
+			box-shadow: 0 1px 0 #fff;	
+		}
+		input.submitButton{
+			background-color: #392f28;
+			border-radius: 4px;
+			font-size: 	14px;
+			padding: 9px;
+			color: #fff;
+			font-weight: bold;	
+			border: 1px solid #392f28;
+			margin-left: 5px;
+			transition: all 0.3s ease;
+			&:hover{
+				background-color: #000;
+				transition: all 0.3s ease;
+			}
+		}
+		input.focus:focus{
+			border-color: #096EB3;
+			outline: none;
+			box-shadow: 0 0 0 2px #096EB3;
+		}
+	}
+	.copy{
+		float: right;
+		position: relative;
+		color: #fff;
+		font-size: 12px;
+		padding-top: 35px;
+		padding-right: 60px;
+		height: 100%;
+		vertical-align: middle;
+		text-align: center;
+	}
 }
 
-.signupForm{
-	float: left;
-	padding-top: 25px;
-	padding-left: 60px;
-}
-
-input.submitButton{
-	background-color: #392f28;
-	border-radius: 4px;
-	font-size: 	14px;
-	padding: 9px;
-	color: #fff;
-	font-weight: bold;	
-	border: 1px solid #392f28;
-	margin-left: 5px;
-	transition: all 0.3s ease;
-}
-
-input.submitButton:hover{
-	background-color: #000;
-	transition: all 0.3s ease;
-}
 
 
-input.email{
-	font-size: 12px;
-	border-radius: 4px;
-	border: 1px solid #ccc;
-	padding: 10px;
-	width: 350px;
-	box-shadow: 0 1px 0 #fff;	
-}
 
-input.focus:focus{
-	border-color: #096EB3;
-	outline: none;
-	box-shadow: 0 0 0 2px #096EB3;
-
-}
-
-.copy{
-	float: right;
-	position: relative;
-	color: #fff;
-	font-size: 12px;
-	padding-top: 35px;
-	padding-right: 60px;
-	height: 100%;
-	vertical-align: middle;
-	text-align: center;
-}
